--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,18 @@
-<router-outlet></router-outlet>
+<div id="scroll"><div id="scroll_stat"></div></div>
+<div class="top-container">
+    <div class="top">   
+        <div id="name">
+            <img id="firstname" src="../assets/deepak.png" alt=""><br><img id="secondname" src="../assets/silaych.png" alt="">
+        </div>
+        <div id="pic">
+            <img src="../assets/pic2.png" alt="">
+        </div>
+    </div>
+</div>
+<div class="main">
+    <app-intro></app-intro>
+    <app-motivation></app-motivation>
+    <app-expirence></app-expirence>
+    <app-features></app-features>
+    <app-contact></app-contact>
+</div>
