--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -6,7 +6,7 @@
             <li>Name</li>
             <li>Roll No</li>
             <li>Branch</li>
-            <li>Home Place</li>
+            <li>Home</li>
             <li>Hobbies</li>
         </ul>
         <ul id="list2">
