--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,5 +1,8 @@
 <div id="features" class="main-div main-div-2">
     <span>4</span>
     <h1>What new feature you can add to the existing website and its Plan of Action</h1>
-    <div></div>
+    <div>
+        I want to add an "Timetable" feature which will contain timetable of including Acads and Department Acticities.<br
+        >All CRs and Council Members will have access to edit it. This will increase the engagment of students with department website
+    </div>
 </div>
